# MinesWeeper

./: CMakeLists.txt  README.md  basic.c  basic.h  game.c  game.h  graphic.c  graphic.h  main.c  menu.c  menu.h
